--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,18 @@
         <plugins>
 
             <plugin>
+                <groupId>com.github.codemonstur</groupId>
+                <artifactId>htmlcompiler</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <phase>compile</phase>
+                        <goals><goal>compile</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <descriptorRefs>
